# sdf2map

./: .gitignore  CMakeLists.txt  README.ja.md  README.md  package.xml
.github/workflows/: ci.yml
docs/: ROADMAP.md
include/sdf2map/: exporter.hpp  options.hpp  publisher.hpp  resource_resolver.hpp  samplers.hpp  world_sampler.hpp
src/: exporter.cpp  main.cpp  publisher.cpp  resource_resolver.cpp  samplers.cpp  world_sampler.cpp
test/: test_e2e_geometry.cpp  test_exporter.cpp  test_ndt_localization.cpp  test_resource_resolver.cpp  test_samplers.cpp  test_world_sampler.cpp
worlds/: test_world.sdf
worlds/meshes/: pyramid.stl
