<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdf2map</name>
  <version>0.1.0</version>
  <description>
    Convert Gazebo (Harmonic) SDF world files into 3D point cloud maps (PCD)
    for NDT localization and 2D occupancy grid maps (PGM+YAML) for Nav2.
  </description>
  <maintainer email="dandelion1124@gmail.com">jazzy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sdformat_vendor</depend>
  <depend>gz_math_vendor</depend>
  <depend>gz_common_vendor</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
